# EtaExe

./: CMakeLists.txt
src/: MyModel.cuh  main.cu  main10.cu  main11.cu  main12.cu  main13.cu  main14.cu  main15.cu  main16.cu  main17.cu  main18.cu  main19.cu  main2.cu  main20.cu  main3.cu  main4.cu  main5.cu  main6.cu  main7.cu  main8.cu  main9.cu  random.h  script.txt  test.txt  test_rgba.cu  test_stl.cu
